changed cards to javascript and added functions for card flipping and manipulating the DOM

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -20,12 +20,14 @@
 		<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
 		<h4>DO YOU THINK YOU HAVE WHAT IT TAKES TO TACKLE THE IMPOSSIBLE CHALLENGE OF MEMORY SET BEFORE YOU? I THINK NOT, BUT THAT IS NOT FOR ME TO DECIDE. FOR IT IS YOU, MY GOOD SIR, MADAM, OR WHATEVER PRONOUN SUITS YOUR FANCY, WHO DECIDE THIS. WITH YOUR WITS, YOUR BRAVERY, AND YOUR PERSERVERENCE YOU MAY BECOME KING OF THIS LAND OF MEMORY AND FOREVER HOLD DOMAIN OVER THOSE WHO PREVIOUSLY DOUBTED YOU, INCLUDING MYSELF. ALL THAT IS NEEDED IS A LITTLE BIT OF GUSTO, A SPRINKLING OF CAN-DO, AND A LOT OF LUCK. DO YOU HAVE THE GALL TO ACCEPT THIS CHALLENGE OR WILL YOU BACK DOWN LIKE THE LILY-LIVERED STREET SCOUNDREL YOU ARE?</h4>
 		<a name="game" class="whitetext">Game</a>
-		<div>
+		<div id="game-board" class="board clearfix"></div>
+
+		<!--<div>
 			<img src="images/back.png" alt="Queen of Diamonds">
 			<img src="images/back.png" alt="Queen of Hearts">
 			<img src="images/back.png" alt="King of Diamonds">
 			<img src="images/back.png" alt="King of Hearts">
-		</div>
+		</div>-->
 	</main>
 	<p class="socials">Consider following us on <a href="https://www.twitter.com/totallyrealmemorygametwitterhandle" class="sociallinks">Twitter</a> or liking our page on <a href="https://www.facebook.com/totalllyrealmemorygamefacebookpage" class="sociallinks">Facebook.</a>
 		</p>
